update admin service && router add
