# app/api/admin/admins.go
@@ -1,6 +1,8 @@
 package admin
 
 import (
+	"strconv"
+
 	"github.com/gin-gonic/gin"
 
 	"gin-base/app/api/admin/helpers/request"
@@ -13,6 +15,8 @@ import (
 // @Summary 查看管理员
 // @Tags admin
 // @Produce json
+// @Param page body int true "页"
+// @Param per_page body int true "页数"
 // @Security ApiKeyAuth
 // @Success 200 {string} json "{"code":200,"message":"ok","data":{}}"
 // @Router /api/admin/admins [get]
@@ -20,7 +24,7 @@ func IndexAdmin(c *gin.Context) {
 	var req request.IndexAdminRequest
 	_ = c.ShouldBindQuery(&req)
 
-	items, total_count, err := services.GetIndexAdmin(&req)
+	items, total_count, err := services.AdminSvc.AdminList(&req)
 	if err != nil {
 		helpers.SendResponse(c, e.GetIndexAdminError, nil)
 	} else {
@@ -38,7 +42,7 @@ func IndexAdmin(c *gin.Context) {
 // @Produce json
 // @Security ApiKeyAuth
 // @Success 200 {string} json "{"code":200,"message":"ok","data":{}}"
-// @Router /api/admin/admins/:code [get]
+// @Router /api/admin/admins/:id [get]
 func ShowAdmin(c *gin.Context) {
 	helpers.SendResponse(c, nil, nil)
 }
@@ -46,11 +50,13 @@ func ShowAdmin(c *gin.Context) {
 // @Summary 创建管理员
 // @Tags admin
 // @Produce json
+// @Param phone body int true "手机号"
+// @Param name body int true "姓名"
 // @Security ApiKeyAuth
 // @Success 200 {string} json "{"code":200,"message":"ok","data":{}}"
 // @Router /api/admin/admins [post]
 func CreateAdmin(c *gin.Context) {
-	var req request.CreateAdminRequest
+	var req request.AdminRequest
 	_ = c.Bind(&req)
 
 	err := validate.Struct(&req)
@@ -59,7 +65,7 @@ func CreateAdmin(c *gin.Context) {
 		return
 	}
 
-	_, err = services.AdminCreate(&req)
+	_, err = services.AdminSvc.AdminCreate(&req)
 	if err != nil {
 		helpers.SendResponse(c, err, nil)
 		return
@@ -71,11 +77,29 @@ func CreateAdmin(c *gin.Context) {
 // @Summary 修改管理员
 // @Tags admin
 // @Produce json
+// @Param phone body int true "手机号"
+// @Param name body int true "姓名"
 // @Security ApiKeyAuth
 // @Success 200 {string} json "{"code":200,"message":"ok","data":{}}"
-// @Router /api/admin/admins/:code [put]
+// @Router /api/admin/admins/:id [put]
 func UpdateAdmin(c *gin.Context) {
-	helpers.SendResponse(c, nil, nil)
+	var req request.AdminRequest
+	_ = c.Bind(&req)
+
+	err := validate.Struct(&req)
+	if err != nil {
+		helpers.SendResponse(c, err, nil)
+		return
+	}
+
+	userID, _ := strconv.Atoi(c.Param("id"))
+	err = services.AdminSvc.AdminUpdate(uint64(userID), &req)
+	if err != nil {
+		helpers.SendResponse(c, err, nil)
+		return
+	}
+
+	helpers.SendResponse(c, e.Ok, nil)
 }
 
 // @Summary 删除管理员
@@ -83,7 +107,14 @@ func UpdateAdmin(c *gin.Context) {
 // @Produce json
 // @Security ApiKeyAuth
 // @Success 200 {string} json "{"code":200,"message":"ok","data":{}}"
-// @Router /api/admin/admins/:code [delete]
+// @Router /api/admin/admins/:id [delete]
 func DeleteAdmin(c *gin.Context) {
+	userID, _ := strconv.Atoi(c.Param("id"))
+	err := services.AdminSvc.AdminDelete(uint64(userID))
+	if err != nil {
+		helpers.SendResponse(c, err, nil)
+		return
+	}
+
 	helpers.SendResponse(c, nil, nil)
 }
