# docs/swagger.json
@@ -19,6 +19,26 @@
                     "admin"
                 ],
                 "summary": "查看管理员",
+                "parameters": [
+                    {
+                        "description": "页",
+                        "name": "page",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "页数",
+                        "name": "per_page",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"code\":200,\"message\":\"ok\",\"data\":{}}",
@@ -41,6 +61,26 @@
                     "admin"
                 ],
                 "summary": "创建管理员",
+                "parameters": [
+                    {
+                        "description": "手机号",
+                        "name": "phone",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "姓名",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"code\":200,\"message\":\"ok\",\"data\":{}}",
@@ -51,7 +91,7 @@
                 }
             }
         },
-        "/api/admin/admins/:code": {
+        "/api/admin/admins/:id": {
             "get": {
                 "security": [
                     {
@@ -87,6 +127,26 @@
                     "admin"
                 ],
                 "summary": "修改管理员",
+                "parameters": [
+                    {
+                        "description": "手机号",
+                        "name": "phone",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "description": "姓名",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{\"code\":200,\"message\":\"ok\",\"data\":{}}",
